# rotor

./: README.md  render.yaml
circuit/: Prover.toml
circuit/src/: main.nr  merkle_tree.nr
client/: next.config.ts  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/profile/: page.tsx
client/components/: Footer.tsx  Header.tsx  Swap.tsx  SwapOrWithdrawTabs.tsx  TransactionHeatmap.tsx  TransactionList.tsx  UserPane.tsx  Withdraw.tsx
client/lib/: circuit.json  commitment.ts  generate-toml.ts  prover.ts  stellar.ts  test-prover.ts
client/scripts/: compute-prover-root.ts
client/utils/: WalletProvider.tsx
docs/: book.toml
docs/src/: INTRODUCTION.md  SUMMARY.md  architecture.md  how_it_works.md  key_features.md  product_flow.md  quick_start.md  run_and_deploy.md  troubleshooting.md  why_rotor.md
docs/src/architecture/: backend.md  frontend.md  overview.md  smart_contracts.md  zk_circuit.md
docs/src/developer_guide/: circuits.md  contracts.md
docs/src/getting_started/: first_transaction.md  installation.md  quick_start.md
event/: go.mod
evm/: .txt  package-lock.json  package.json
evm/contracts/: RotorToken.sol
evm/test/: RotorToken.test.ts
relayer/: README-DENO.md  package.json  pnpm-lock.yaml  tsconfig.json
relayer/src/: circuit.json  index.ts  test-relayer.ts
stellar/contracts/a-token/: Cargo.toml
stellar/contracts/a-token/src/: contract.rs  test.rs
stellar/contracts/a-token/test_snapshots/test/: burn_tokens.1.json  initial_state.1.json  mint_tokens.1.json  transfer_tokens.1.json
(+35 files in other folders)
