[package]
name = "a-token"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true}
stellar-tokens = "0.6.0"
stellar-access = "0.6.0"
stellar-contract-utils = "0.6.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
